--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "author": "Oe <eakkawatna@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "jest": "^21.2.1"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "yarn jest"
   }
 }
